# trash-sim-9m

./: CMakeLists.txt  README.md
CMakeModules/: FindAssimp.cmake  FindAssimp.cmake~  FindBullet.cmake  FindMagick.cmake  FindMagick.cmake~
Pics/: delete
include/: Entity.hpp  GFKUtil.hpp  GroupManager.hpp  PhysicsCube.hpp  PhysicsCylinder.hpp  PhysicsEntity.hpp  PhysicsPlane.hpp  PhysicsSphere.hpp  PhysicsStaticEntity.hpp  PhysicsWorld.hpp  Property.hpp  PropertyManager.hpp  Types.hpp  camera.h  engine.h  graphics.h  graphics_headers.h  object.txt  shader.h  window.h
models/: Graf.mtl  Paper.mtl  TrashCan1.mtl  blankPlane.mtl  chair.mtl  cubicle.mtl  cubicle_section.mtl  fan.mtl  menu.mtl  vendingMachine.mtl  wall1.mtl  wall4.mtl
shaders/: Fragment_lighting_fragment_shader  Fragment_lighting_vertex_shader  GL_FRAGMENT_SHADER.txt  GL_VERTEX_SHADER.txt
src/: Entity.cpp  GFKUtil.cpp  PhysicsCube.cpp  PhysicsCylinder.cpp  PhysicsEntity.cpp  PhysicsPlane.cpp  PhysicsSphere.cpp  PhysicsStaticEntity.cpp  PhysicsWorld.cpp  Property.cpp  PropertyManager.cpp  camera.cpp  engine.cpp  graphics.cpp  main.cpp  shader.cpp  window.cpp
